package pb;

option java_package = "com.google.protobuf.implementation";
option java_outer_classname = "CompatibilityItemProtos";

message CompatibilityItem {
    required string ver1  = 1;
    required string comp1 = 2;
    required string ver2  = 3;
}

message CompatibilityItems {
    repeated CompatibilityItem item = 1;
}
