package proto.pb;

import "compatibility.proto";

message ConnectInfo {
    optional string version = 1;
    optional CompatibilityInfo compatibilityInfo = 2;
}